huginn/deployment-web.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: huginn-web
spec:
  replicas: 1
  selector:
    matchLabels:
      name: huginn-web
  template:
    metadata:
      labels:
        name: huginn-web
    spec:
      containers:
        - name: keycloak-gatekeeper
          image: quay.io/keycloak/keycloak-gatekeeper
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /oauth/health
              port: http
          readinessProbe:
            httpGet:
              path: /oauth/health
              port: http
        - image: image_prefix:huginn-single-process
          securityContext:
            runAsUser: 1001
            runAsGroup: 0
          name: huginn-web
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 120
          readinessProbe:
            httpGet:
              path: /
              port: 3000
      restartPolicy: Always
