huginn/deployment-worker.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: huginn-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      name: huginn-worker
  template:
    metadata:
      labels:
        name: huginn-worker
    spec:
      containers:
        - image: image_prefix:huginn-single-process
          name: huginn-worker
          command:
            - /scripts/init
            - bin/threaded.rb
          securityContext:
            runAsUser: 1001
            runAsGroup: 0
      restartPolicy: Always
