huginn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huginn-web
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    name: huginn-web
