huginn/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: huginn-web
  labels:
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    ingress.kubernetes.io/secure-backends: "false"
    ingress.kubernetes.io/backend-protocol: "HTTP"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    stable.k8s.psg.io/kcm.provider: http
spec:
  rules:
    - host: huginn.csoc.cto-notprod.homeoffice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: huginn-web
              servicePort: http
  tls:
    - hosts:
        - huginn.csoc.cto-notprod.homeoffice.gov.uk
      secretName: huginn-le-tls
